--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,8 +10,8 @@
         position: absolute;
         right: 3em;
         top: 1em;
-        height: 6em;
-        width: 6em;
+        height: 7em;
+        width: 7em;
         overflow:hidden;
         -webkit-border-radius:100%;
         -moz-border-radius:100%;
@@ -20,16 +20,51 @@
 
     #menu{
         position: absolute;
-        height: 25em;
-        width: 17em;
+        height: 28em;
+        width: 20em;
         background-color: rgb(37, 44, 37);
-        top: 12em;
+        top: 9em;
         right: 2em;
+        border-radius: 5%;
     }
 
     li, ul{
         list-style-type: none;
         line-height: 2;
-        font-size: 4em;
+        font-size: 45px;
+        margin-top: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
+
+
+    #solde{
+        font-size: 25em;
+        color: #1eff69;
+        left: auto;
+        text-align: center;
+        text-shadow: rgb(49, 49, 49) 1px 0 20px;
+    }
+
+    #more{
+        margin-left: auto;
+        margin-right: auto;
+        height: 2em;
+        width: 7em;
+        border-radius: 5%;
+        background-color: #1eff69;
+        font-size: 6em;
+        text-align: center;
+        color: white;
+    }
+
+    #input{
+        height: 2em;
+        width: 5em;
+        font-size: 8em;
+        right: 5em;
+        background-color: rgb(42, 211, 107);
+        border: none;
+    }
+
 }
