--- a/css/screen.css
+++ b/css/screen.css
@@ -123,6 +123,7 @@
 
     #user{
         top: 2em;
+        z-index: 1;
         position: fixed;
         float: right;
         right: 2%;
@@ -131,6 +132,7 @@
     }
     #magasins{
         position: fixed;
+        z-index: 1;
         right: 11%;
         top: 2em;
         height: 5em;
@@ -138,6 +140,7 @@
     }
     #bag{
         top: 2em;
+        z-index: 1;
         fill: #ffffff;
         position: fixed;
         right: 20%;
@@ -146,6 +149,7 @@
     }
     
     #logo{
+        z-index: 1;
         position: fixed;
         margin-left: 45%;
         margin-right: 55%;
@@ -167,13 +171,14 @@
     }
 
     #store{
+      z-index: 1;
       float: none;
       height: auto;
       width: 100%;
       border: none;
   }
 
-  #chip{
+  .chip{
     height: auto;
     float: none;
     width: 100%;
@@ -196,5 +201,23 @@
   color: rgb(0, 0, 0);
 }
 
+@media (prefers-color-scheme: dark) {
+  body{
+    background-color: #1d1d1d;
+  }
 
+  #menu{
+    background-color: #ffffff;
+  }
+  #menu:hover{
+    background-color: #ffffff;
+  }
+
+  .store-texte{
+    color: rgb(153, 153, 153);
+  } 
+    .chip-texte{
+    color: rgb(153, 153, 153);
+    }
+}
 }
